Murphy System/outputs/workspace_output_1769371689_8726.txt
  File "/workspace/murphy_backend_complete.py", line 2596
    &quot;&quot;&quot;Generate LLM response.&quot;&quot;&quot;
    ^
SyntaxError: invalid syntax
